--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon dist/app.js",
+    "lint": "eslint --fix src/**/*.{ts,tsx}"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.10",
-    "eslint": "^7.1.0",
     "nodemon": "^2.0.4"
   }
 }
