--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js",
+    "start": "cross-env NODE_ENV=production node dist/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon dist/app.js",
     "lint": "eslint --fix src/**/*.{ts,tsx}"
   },
   "repository": {
@@ -21,13 +22,17 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
+    "mongoose": "^5.9.17",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.22",
     "@types/node": "^14.0.10",
     "@types/uuid": "^8.0.0",
     "nodemon": "^2.0.4"
