--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.17",
-    "uuid": "^8.1.0"
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.22",
+    "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.0.10",
     "@types/uuid": "^8.0.0",
     "nodemon": "^2.0.4"
