--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.22",
     "@types/mongoose-unique-validator": "^1.0.4",
