--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SamiHonkasalo/mern-backend#readme",
   "dependencies": {
+    "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -28,7 +29,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.17",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
