--- a/package.json
+++ b/package.json
@@ -22,21 +22,25 @@
   "dependencies": {
     "@types/multer": "^1.4.3",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.17",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.22",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.0.10",
