--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SamiHonkasalo/mern-backend#readme",
   "dependencies": {
     "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.693.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
